--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+    crossorigin=""/>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
   </head>
 
   <body>
-    
+    <div id="line-chart"></div> 
+    <div id="map" style="height: 100vh">
+
+
+    <script src={{ url_for('static', filename='./js/index.js') }}></script>
+    <script src={{ url_for('static', filename='./Leaflet.Antimeridian/dist/leaflet.antimeridian-src.js') }}></script>
   </body>
 </html>
