--- a/templates/index.html
+++ b/templates/index.html
@@ -11,12 +11,13 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
+
+    <link rel="stylesheet" href={{ url_for('static', filename='./css/index.css')}}>
   </head>
 
   <body>
-    <div id="line-chart"></div> 
     <div id="map" style="height: 100vh">
-
+    </div>
 
     <script src={{ url_for('static', filename='./js/index.js') }}></script>
   </body>
