made all_lines function in python and go

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,13 @@
       integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
      crossorigin=""></script>
 
-    <link rel="stylesheet" href={{ url_for('static', filename='./css/index.css')}}>
+    <link rel="stylesheet" href='/static/css/index.css'>
   </head>
 
   <body>
     <div id="map" style="height: 100vh">
     </div>
 
-    <script src={{ url_for('static', filename='./js/index.js') }}></script>
+    <script src='/static/js/index.js'></script>
   </body>
 </html>
