--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
   </head>
 
   <body>
+    <input type="date" id="date-picker">
     <label for="date-slider">Date: </label>
     <input type="range" min="0" max="240" step="3" value="0" id="date-slider" name="date-slider" oninput="onSliderChange()" style="width:80vw">
     <label for="date-slider" id="date-slider-label">0</label>
